--- a/.classpath
+++ b/.classpath
@@ -52,13 +52,12 @@
 	<classpathentry kind="var" path="M2_REPO/com/thoughtworks/xstream/xstream/1.3/xstream-1.3.jar" sourcepath="M2_REPO/com/thoughtworks/xstream/xstream/1.3/xstream-1.3-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/xpp3/xpp3_min/1.1.4c/xpp3_min-1.1.4c.jar" sourcepath="M2_REPO/xpp3/xpp3_min/1.1.4c/xpp3_min-1.1.4c-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/codehaus/jettison/jettison/1.1/jettison-1.1.jar" sourcepath="M2_REPO/org/codehaus/jettison/jettison/1.1/jettison-1.1-sources.jar"/>
-	<classpathentry kind="var" path="M2_REPO/mysql/mysql-connector-java/5.1.25/mysql-connector-java-5.1.25.jar"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="K:/JAVA/DB2/db2jcc_license_cisuz.jar"/>
-	<classpathentry kind="lib" path="K:/JAVA/DB2/db2jcc_10.5fp8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Sueidy Gonçalves/Downloads/db2jcc_10.5fp8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Sueidy Gonçalves/Downloads/db2jcc_license_cisuz.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
