--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,8 @@
 
 	<properties>
 		<jdk.version>1.6</jdk.version>
-		<spring.version>3.2.2.RELEASE</spring.version>
+		<spring.version>4.0.7.RELEASE</spring.version>
 		<spring.batch.version>2.2.0.RELEASE</spring.batch.version>
-		<mysql.driver.version>5.1.25</mysql.driver.version>
 	</properties>
 
 	<dependencies>
@@ -22,6 +21,21 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-web</artifactId>
+	        <version>${spring.version}</version>
+    	</dependency>
+    	 <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-webmvc</artifactId>
+	        <version>${spring.version}</version>
+	    </dependency>
+	    <dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-aop</artifactId>
+		    <version>${spring.version}</version>
 		</dependency>
 
 		<!-- Spring Jsbc -->
